--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,11 @@ body {
     text-align: center;
     background: #f4f4f4;
     color: #333;
+    margin: 0;
+    padding: 0;
 }
 
-a {
-    color: red;
-}
-
-a:link, a:visited {
+a, a:link, a:visited {
     text-decoration: none;
     color: #333;
     background: transparent;
@@ -22,6 +20,13 @@ a:hover {
 .header h2 {
     color: gray;
     font-size: 18px;
+}
+.header .logoimge{
+    width: 100%;
+    height: 2px;
+    background: #404040;
+    position: fixed;
+    top: 0;
 }
 
 .body {
@@ -59,10 +64,15 @@ a:hover {
 }
 
 .footer {
-    color: #333;
+    color: #999;
+    background: #111;
     font-size: 14px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 0 auto;
     width: 100%;
+}
+
+.footer  a, a:link, a:visited {
+    color: #999;
 }
